Added YOLOv5, fixed borders, changed bboxes from int to double array

--- a/config_creator/style.css
+++ b/config_creator/style.css
@@ -22,6 +22,10 @@ section{
     margin-bottom: 3%;
 }
 
+input{
+    margin-bottom: 1%;
+}
+
 #path_config_model, #deepsort_tracker_model{
     margin-bottom: 0.5%;
 }
